# pet-fastapi-sqlalchemy-city

./: .env  .env-non-dev  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 2024_06_10_1702-92c78f7d2520_alembic_init.py  2024_06_10_1713-d7def9e6d15a_person_table.py  2024_06_11_1542-81854bd52aeb_shop.py  2024_06_11_1636-70cb330df104_refresh_foreign_key.py  2024_06_12_0854-628febdeb1f1_shop.py  2024_06_12_0935-e9dd86f8b2bd_create_tables.py  2024_06_12_0943-ee3e40a12931_create_tables.py  2024_06_12_0945-ef5aff4c49c3_create_tables.py  2024_06_12_1133-8414cf9d6cfe_email.py  2024_06_12_1157-bbc3381730b4_unique_email.py  2024_06_12_1223-072566cf619a_workers_id.py  2024_06_12_1224-9b7e37c8a47d_drop_id.py  2024_06_12_1348-d65135b83fd4_product_table.py  2024_06_12_1351-dacba367079b_association_table.py  2024_06_12_1352-6bde8f2cc815_association_table.py  2024_06_12_1407-703c5d57f4f3_unique_products_titles.py  2024_06_12_1457-f98c88a9aaa3_fix_id_assotiation_table.py  2024_06_12_1458-d2a3b05c28cc_fix_id_assotiation_table.py  2024_06_12_1500-247205031c04_fix_name_of_collumns_assotiation_table.py  2024_06_12_1808-cb5f009ca544_create_tables.py  2024_06_15_2323-68050a380aaf_message.py  2024_06_17_1606-bb3948b9ddcd_.py
api_v1/: __init__.py
api_v1/guard/: dependencies.py  router.py
core/: __init__.py  config.py  db_helper.py
pages/: router.py
templates/: base.html  chat.html  shops.html
tests/: conftest.py  test_person.py  test_product.py  test_shop.py
ws_chat/: models.py  router.py
(+18 files in other folders)
